--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\CaptJM\\ELFinderWidgetBundle\\": "/"
+      "CaptJM\\ELFinderWidgetBundle\\": "src/"
     }
   },
   "scripts": {
